--- a/apps/wallet-mobile/src/i18n/locales/pt-BR.json
+++ b/apps/wallet-mobile/src/i18n/locales/pt-BR.json
@@ -130,6 +130,7 @@
   "swap.swapScreen.swapFrom": "Swap from",
   "swap.swapScreen.swapTo": "Swap to",
   "swap.swapScreen.currentBalance": "Current balance",
+  "swap.swapScreen.notEnoughBalance": "Not enough balance",
   "swap.swapScreen.balance": "Saldo",
   "swap.swapScreen.selectToken": "Select token",
   "swap.swapScreen.marketPrice": "Market price",
@@ -145,6 +146,7 @@
   "swap.swapScreen.poolFee": "Tarifa da reserva",
   "swap.swapScreen.assetsIn": "Possuo esse ativo",
   "swap.swapScreen.noAssetsFound": "No assets found for this pair",
+  "swap.swapScreen.noAssetsFoundFor": "No assets found for \"{search}\"",
   "swap.swapScreen.defaultSlippage": "Default Slippage Tolerance",
   "swap.swapScreen.slippageInfo": "Slippage tolerance is set as a percentage of the total swap value. Your transactions will not be executed if the price moves by more than this amount.",
   "swap.swapScreen.swapMinAda": "Min-ADA is the minimum ADA amount required to be contained when holding or sending Cardano native tokens.",
