--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -325,7 +325,7 @@
   "components.settings.changewalletname.changeButton": "Change name",
   "components.settings.changewalletname.title": "Change wallet name",
   "components.settings.changewalletname.walletNameInputLabel": "Wallet name",
-  "components.settings.removewalletscreen.descriptionParagraph1": "If you really wish to permanently delete the wallet, make sure you have written down your 15-word recovery phrase.",
+  "components.settings.removewalletscreen.descriptionParagraph1": "If you wish to permanently delete the wallet, make sure you have written down your 15-word recovery phrase.",
   "components.settings.removewalletscreen.descriptionParagraph2": "To confirm this operation, type the wallet name below.",
   "components.settings.removewalletscreen.hasWrittenDownMnemonic": "I have written down the recovery phrase of this wallet and understand that I cannot recover the wallet without it.",
   "components.settings.removewalletscreen.remove": "Remove wallet",
@@ -365,6 +365,8 @@
   "components.settings.walletsettingscreen.walletName": "Wallet name",
   "components.settings.walletsettingscreen.walletType": "Wallet type:",
   "components.settings.walletsettingscreen.about": "About",
+  "components.settings.walletsettingscreen.general": "General",
+  "components.settings.walletsettingscreen.actions": "Actions",
   "components.settings.changelanguagescreen.title": "Language",
   "components.stakingcenter.confirmDelegation.delegateButtonLabel": "Delegate",
   "components.stakingcenter.confirmDelegation.ofFees": "of fees",
